# OPCUA-VALI

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  ESP2.txt  app_main.c  ds3231.c  ethernet_connect.c  ethernet_connect.h  input.c  input.h  lorasx1278.c  lorasx1278.h  mqtt_connect.c  mqtt_connect.h  open62541.c  wifi_connect.c  wifi_connect.h
main/i2c/: CMakeLists.txt  ds3231.c  ds3231.h  stm32f1i2c.c  stm32f1i2c.h
